--- a/app/src/main/res/drawable/ic_arrow_back_24dp.xml
+++ b/app/src/main/res/drawable/ic_arrow_back_24dp.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk on 01.12.19 22:42
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 01.12.19 20:14
+  ~ Last modified 01.12.19 19:58
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -11,11 +11,11 @@
 <vector
     android:height="24dp"
     android:width="24dp"
-    android:tint="@color/white"
+    android:tint="@color/white_85"
     android:viewportHeight="24.0"
     android:viewportWidth="24.0"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <path android:fillColor="@color/white" android:pathData="M20,2L4,2c-1.1,0 -1.99,0.9 -1.99,2L2,22l4,-4h14c1.1,0 2,-0.9 2,-2L22,4c0,-1.1 -0.9,-2 -2,-2zM18,14L6,14v-2h12v2zM18,11L6,11L6,9h12v2zM18,8L6,8L6,6h12v2z"/>
+    <path android:fillColor="#FF000000" android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
 
 </vector>
