--- a/app/src/main/res/drawable/ic_nav_account_24dp.xml
+++ b/app/src/main/res/drawable/ic_nav_account_24dp.xml
@@ -11,11 +11,10 @@
 <vector
     android:height="24dp"
     android:width="24dp"
-    android:tint="@color/white"
+    android:tint="@color/white_85"
     android:viewportHeight="24.0"
     android:viewportWidth="24.0"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <path android:fillColor="@color/white" android:pathData="M20,2L4,2c-1.1,0 -1.99,0.9 -1.99,2L2,22l4,-4h14c1.1,0 2,-0.9 2,-2L22,4c0,-1.1 -0.9,-2 -2,-2zM18,14L6,14v-2h12v2zM18,11L6,11L6,9h12v2zM18,8L6,8L6,6h12v2z"/>
-
+    <path android:fillColor="@color/white" android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
 </vector>
