--- a/app/src/main/res/drawable/ic_nav_header_arrow_down_24dp.xml
+++ b/app/src/main/res/drawable/ic_nav_header_arrow_down_24dp.xml
@@ -1,21 +1,18 @@
 <!--
   ~ Created by Andrii Kovalchuk on 01.12.19 22:42
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 01.12.19 20:14
+  ~ Last modified 18.11.19 20:01
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
-<vector
-    android:height="24dp"
-    android:width="24dp"
-    android:tint="@color/white"
+<vector android:height="24dp"
+    android:tint="#FFFFFF"
     android:viewportHeight="24.0"
     android:viewportWidth="24.0"
+    android:width="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <path android:fillColor="@color/white" android:pathData="M20,2L4,2c-1.1,0 -1.99,0.9 -1.99,2L2,22l4,-4h14c1.1,0 2,-0.9 2,-2L22,4c0,-1.1 -0.9,-2 -2,-2zM18,14L6,14v-2h12v2zM18,11L6,11L6,9h12v2zM18,8L6,8L6,6h12v2z"/>
-
+    <path android:fillColor="@color/white_85" android:pathData="M7,10l5,5 5,-5z"/>
 </vector>
