--- a/app/src/main/res/drawable/ic_nav_header_settings_24dp.xml
+++ b/app/src/main/res/drawable/ic_nav_header_settings_24dp.xml
@@ -1,3 +1,13 @@
+<!--
+  ~ Created by Andrii Kovalchuk on 01.12.19 22:42
+  ~ Copyright (c) 2019. All rights reserved.
+  ~ Last modified 18.11.19 20:01
+  ~
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
+  -->
+
 <vector android:height="24dp"
 	android:width="24dp"
 	android:tint="#FFFFFF"
