--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Created by Andrii Kovalchuk on 01.12.19 22:42
+  ~ Copyright (c) 2019. All rights reserved.
+  ~ Last modified 01.12.19 19:06
+  ~
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
+  -->
+
 <androidx.coordinatorlayout.widget.CoordinatorLayout
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
@@ -48,7 +58,7 @@
 				android:layout_height="?attr/actionBarSize"
 				app:layout_collapseMode="pin"
 				app:menu="@menu/profile_view_options"
-				app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
+				app:navigationIcon="@drawable/ic_arrow_back_24dp"
 				app:popupTheme="@style/menuPopupStyle" />
 
 		</com.google.android.material.appbar.CollapsingToolbarLayout>
