some material components fix

--- a/app/src/main/res/layout/drawer_flow_fragment.xml
+++ b/app/src/main/res/layout/drawer_flow_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Andrii Kovalchuk on 02.12.19 20:57
+  ~ Created by Andrii Kovalchuk on 03.12.19 20:34
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 02.12.19 20:50
+  ~ Last modified 03.12.19 20:30
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -63,10 +63,10 @@
 		android:dividerHeight="14dp"
 		android:fitsSystemWindows="false"
 		app:headerLayout="@layout/nav_header"
-		app:itemBackground="@drawable/nav_clicked"
-		app:itemIconTint="@drawable/nav_clicked_text"
-		app:itemTextColor="@drawable/nav_clicked_text"
-		app:itemTextAppearance="@style/regular_text_white_16sp_85op"
+		app:itemBackground="@drawable/nav_clicked_background"
+		app:itemIconTint="@drawable/nav_clicked_item"
+		app:itemTextColor="@drawable/nav_clicked_item"
+		app:itemTextAppearance="@style/navigation_item"
 		app:menu="@menu/navigation_items"/>
 
 
