--- a/app/src/main/res/drawable/nav_clicked_item.xml
+++ b/app/src/main/res/drawable/nav_clicked_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Andrii Kovalchuk on 01.12.19 22:42
+  ~ Created by Andrii Kovalchuk on 03.12.19 20:34
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 01.12.19 20:44
+  ~ Last modified 03.12.19 18:57
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -12,7 +12,7 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<item android:color="@color/amethyst" android:state_checked="true" />
+	<item android:color="@color/white" android:state_checked="true" />
 
 	<item android:color="@color/white_85" />
 
