--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
+<!--
+  ~ Created by Andrii Kovalchuk on 03.12.19 20:34
+  ~ Copyright (c) 2019. All rights reserved.
+  ~ Last modified 03.12.19 14:23
+  ~
+  ~ This Source Code Form is subject to the terms of the Mozilla Public
+  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
+  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
+  -->
+
+<androidx.cardview.widget.CardView
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_height="wrap_content"
 	android:layout_width="wrap_content"
 	app:cardCornerRadius="10dp"
@@ -18,7 +29,7 @@
 			android:id="@+id/background"
 			android:layout_width="match_parent"
 			android:layout_height="80dp"
-			android:background="#303F9F"
+			android:background="?colorError"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintBottom_toTopOf="@id/title" />
@@ -38,16 +49,18 @@
 			android:id="@+id/title"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:gravity="center"
 			android:layout_margin="@dimen/general_margin_16"
+			android:fontFamily="@font/rubik_bold"
+			android:gravity="center"
 			android:text="Rate 5 stars if you like the app"
 			android:textAlignment="center"
 			android:textColor="#000000"
 			android:textSize="16sp"
+			android:typeface="normal"
+			app:layout_constraintBottom_toTopOf="@id/message"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/background"
-			app:layout_constraintBottom_toTopOf="@id/message" />
+			app:layout_constraintTop_toBottomOf="@id/background" />
 
 		<TextView
 			android:id="@+id/message"
@@ -77,7 +90,6 @@
 			android:layout_marginStart="@dimen/general_margin_16"
 			android:layout_marginTop="@dimen/general_margin_16"
 			android:text="NO"
-			android:textColor="#ffffff"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toStartOf="@id/positiveBtn"
 			app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +103,6 @@
 			android:layout_marginBottom="@dimen/general_margin_16"
 			android:background="@drawable/alert_button_positive"
 			android:text="YES"
-			android:textColor="#ffffff"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toEndOf="@id/negativeBtn" />
