--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Andrii Kovalchuk on 30.11.19 19:25
+  ~ Created by Andrii Kovalchuk on 03.12.19 20:34
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 30.11.19 19:24
+  ~ Last modified 03.12.19 20:30
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -81,7 +81,7 @@
 				android:src="@drawable/fragment_chat_ic_attachment_24dp"/>
 
 			<EditText
-				android:id="@+id/editTextMessage"
+				android:id="@+id/textMessageInput"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:background="@null"
