--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Andrii Kovalchuk on 03.12.19 20:34
+  ~ Created by Andrii Kovalchuk on
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 03.12.19 20:30
+  ~ Last modified 04.12.19 17:30
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -52,12 +52,12 @@
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintBottom_toTopOf="@id/content_message"
+			app:layout_constraintBottom_toTopOf="@id/messageInputContainer"
 			tools:itemCount="3"
 			tools:listitem="@layout/fragment_chat_item_left"/>
 
 		<RelativeLayout
-			android:id="@+id/content_message"
+			android:id="@+id/messageInputContainer"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:background="@color/colorAccentDark"
