--- a/app/src/main/res/layout/fragment_places.xml
+++ b/app/src/main/res/layout/fragment_places.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Andrii Kovalchuk on 22.11.19 19:36
+  ~ Created by Andrii Kovalchuk on
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 22.11.19 17:45
+  ~ Last modified 04.12.19 17:13
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -53,7 +53,7 @@
 	</com.google.android.material.tabs.TabLayout>
 
 	<androidx.viewpager2.widget.ViewPager2
-		android:id="@+id/feed_vp"
+		android:id="@+id/placesViewPager"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
 		android:overScrollMode="never"
