splash activity is an imageview inside main activity layout now

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Last modified 04.12.19 19:40
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -14,4 +14,15 @@
 	android:id="@+id/main_activity_container"
 	android:layout_height="match_parent"
 	android:layout_width="match_parent"
-	xmlns:android="http://schemas.android.com/apk/res/android"/>
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools">
+
+	<ImageView
+		android:background="@color/black"
+		android:id="@+id/splashLogoContainer"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:src="@drawable/logo_loading"
+		tools:ignore="ContentDescription" />
+
+</FrameLayout>
