--- a/app/src/main/res/layout/fragment_flow_auth.xml
+++ b/app/src/main/res/layout/fragment_flow_auth.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Last modified 04.12.19 20:55
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -10,32 +10,24 @@
   -->
 
 <androidx.constraintlayout.widget.ConstraintLayout
-	android:id="@+id/auth_container"
+	android:id="@+id/authContainer"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:background="@color/colorPrimaryDark"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools">
 
-	<FrameLayout
-		android:layout_width="0dp"
-		android:layout_height="0dp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintTop_toTopOf="parent">
-		<ImageView
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:scaleType="centerCrop"
-			android:src="@drawable/background"
-			tools:ignore="ContentDescription" />
-	</FrameLayout>
+
+	<ImageView
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:scaleType="centerCrop"
+		android:src="@drawable/background"
+		tools:ignore="ContentDescription" />
 
 
 	<TextView
-		android:id="@+id/tv_logan1"
+		android:id="@+id/sloganTv_1"
 		android:text="@string/auth_slogan1"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +38,7 @@
 
 
 	<TextView
-		android:id="@+id/tv_logan2"
+		android:id="@+id/sloganTv_2"
 		android:text="@string/auth_slogan2"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
@@ -55,11 +47,19 @@
 		app:layout_constraintVertical_bias="0.6"
 		style="@style/auth_slogan2"/>
 
-	<Button
-		android:id="@+id/facebook_login_button_delegate"
+	<com.google.android.material.button.MaterialButton
+		app:backgroundTint="@color/myFacebookColor"
+		android:id="@+id/btnFacebookLoginDelegate"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:background="@drawable/facebook_btn"
+		android:padding="@dimen/general_margin_16"
+		android:fontFamily="@font/rubik_medium"
+		android:text="Log in with Facebook"
+		android:textAllCaps="false"
+		android:textSize="18sp"
+		app:icon="@drawable/ic_facebook_logo"
+		app:cornerRadius="8dp"
+		app:rippleColor="@color/black_50"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
 		app:layout_constraintVertical_bias="0.85"/>
 
 	<com.facebook.login.widget.LoginButton
-		android:id="@+id/facebook_login_button"
+		android:id="@+id/btnFacebookLogin"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:visibility="gone"
