--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Last modified 04.12.19 20:40
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -31,6 +31,7 @@
 	<color name="colorSurface">#1A1A25</color>
 	<color name="colorOnSurface">#d8ffffff</color>
 
+	<color name="myFacebookColor">#577cc1</color>
 
 	<color name="black">#000000</color>
 	<color name="black_50">#80000000</color>
